--- a/ui/interface.ui
+++ b/ui/interface.ui
@@ -26,7 +26,7 @@
     <property name="currentIndex">
      <number>1</number>
     </property>
-    <widget class="QWidget" name="first_page">
+    <widget class="QWidget" name="page_greet">
      <widget class="QGroupBox" name="group_user_data">
       <property name="geometry">
        <rect>
@@ -153,7 +153,7 @@
       </widget>
      </widget>
     </widget>
-    <widget class="QWidget" name="page_2">
+    <widget class="QWidget" name="page_actions">
      <widget class="QPushButton" name="button_download">
       <property name="geometry">
        <rect>
@@ -180,7 +180,30 @@
        <string>upload</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>220</y>
+        <width>211</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Comic Sans MS</family>
+        <pointsize>15</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Choose what to do</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+      </property>
+     </widget>
     </widget>
+    <widget class="QWidget" name="page_download"/>
    </widget>
   </widget>
  </widget>
