--- a/ui/interface.ui
+++ b/ui/interface.ui
@@ -6,14 +6,23 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>375</width>
-    <height>812</height>
+    <width>373</width>
+    <height>715</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="autoFillBackground">
+   <bool>true</bool>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true">background: rgba(255, 255, 255, 0.01);</string>
+   </property>
    <widget class="QStackedWidget" name="main_windows">
     <property name="geometry">
      <rect>
@@ -23,137 +32,235 @@
       <height>812</height>
      </rect>
     </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="page_greet">
-     <widget class="QGroupBox" name="group_user_data">
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <widget class="QLabel" name="background_greet">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>220</y>
-        <width>255</width>
-        <height>300</height>
+        <x>10</x>
+        <y>10</y>
+        <width>361</width>
+        <height>701</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>assets/page_greet.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="input_server_ip">
+      <property name="geometry">
+       <rect>
+        <x>88</x>
+        <y>280</y>
+        <width>205</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="statusTip">
+       <string/>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="placeholderText">
+       <string>type server ip</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="input_server_password">
+      <property name="geometry">
+       <rect>
+        <x>88</x>
+        <y>400</y>
+        <width>205</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="statusTip">
+       <string/>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
+      <property name="inputMethodHints">
+       <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText|Qt::ImhSensitiveData</set>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="echoMode">
+       <enum>QLineEdit::Password</enum>
+      </property>
+      <property name="placeholderText">
+       <string>type password</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="input_server_username">
+      <property name="geometry">
+       <rect>
+        <x>88</x>
+        <y>340</y>
+        <width>205</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="statusTip">
+       <string/>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="placeholderText">
+       <string>type login</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="button_save">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>480</y>
+        <width>141</width>
+        <height>61</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <kerning>true</kerning>
+        <kerning>false</kerning>
        </font>
       </property>
-      <property name="title">
-       <string/>
+      <property name="toolTip">
+       <string notr="true"/>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
+      <property name="text">
+       <string notr="true"/>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>289</width>
+        <height>1000</height>
+       </size>
+      </property>
+      <property name="autoDefault">
+       <bool>false</bool>
+      </property>
+      <property name="default">
+       <bool>false</bool>
       </property>
       <property name="flat">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
-      <property name="checkable">
-       <bool>false</bool>
-      </property>
-      <property name="checked">
-       <bool>false</bool>
-      </property>
-      <widget class="QLineEdit" name="input_server_password">
-       <property name="geometry">
-        <rect>
-         <x>25</x>
-         <y>160</y>
-         <width>205</width>
-         <height>40</height>
-        </rect>
-       </property>
-       <property name="statusTip">
-        <string/>
-       </property>
-       <property name="inputMethodHints">
-        <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText|Qt::ImhSensitiveData</set>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
-       </property>
-       <property name="placeholderText">
-        <string>type password</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="input_server_username">
-       <property name="geometry">
-        <rect>
-         <x>25</x>
-         <y>100</y>
-         <width>205</width>
-         <height>40</height>
-        </rect>
-       </property>
-       <property name="statusTip">
-        <string/>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="placeholderText">
-        <string>type login</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="input_server_ip">
-       <property name="geometry">
-        <rect>
-         <x>25</x>
-         <y>40</y>
-         <width>205</width>
-         <height>40</height>
-        </rect>
-       </property>
-       <property name="statusTip">
-        <string/>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="placeholderText">
-        <string>type server ip</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_save">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>230</y>
-         <width>170</width>
-         <height>50</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Save</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>251</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>Comic Sans MS</family>
-         <pointsize>16</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Enter your creditenals</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignHCenter</set>
-       </property>
-      </widget>
      </widget>
+     <widget class="QLabel" name="background_fill">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>381</width>
+        <height>721</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background: #262626;</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <zorder>background_fill</zorder>
+     <zorder>background_greet</zorder>
+     <zorder>input_server_ip</zorder>
+     <zorder>input_server_password</zorder>
+     <zorder>input_server_username</zorder>
+     <zorder>button_save</zorder>
     </widget>
-    <widget class="QWidget" name="page_actions">
+    <widget class="QWidget" name="page_gallery">
+     <widget class="QPushButton" name="button_upload">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>620</y>
+        <width>111</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>1000</width>
+        <height>50</height>
+       </size>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_upload">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>590</y>
+        <width>171</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>assets/button_upload.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="background_fill_2">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>381</width>
+        <height>721</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background: #262626;</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <zorder>background_fill_2</zorder>
+     <zorder>label_upload</zorder>
+     <zorder>button_upload</zorder>
+    </widget>
+    <widget class="QWidget" name="page_picture">
      <widget class="QPushButton" name="button_download">
       <property name="geometry">
        <rect>
@@ -167,43 +274,7 @@
        <string>download</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="button_upload">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>290</y>
-        <width>175</width>
-        <height>50</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>upload</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_2">
-      <property name="geometry">
-       <rect>
-        <x>80</x>
-        <y>220</y>
-        <width>211</width>
-        <height>51</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Comic Sans MS</family>
-        <pointsize>15</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Choose what to do</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignBottom|Qt::AlignHCenter</set>
-      </property>
-     </widget>
     </widget>
-    <widget class="QWidget" name="page_download"/>
    </widget>
   </widget>
  </widget>
