--- a/ui/interface.ui
+++ b/ui/interface.ui
@@ -45,28 +45,6 @@
      <property name="styleSheet">
       <string notr="true"/>
      </property>
-     <widget class="QLabel" name="background_greet">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>361</width>
-        <height>701</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-      <property name="pixmap">
-       <pixmap>assets/page_greet.png</pixmap>
-      </property>
-      <property name="scaledContents">
-       <bool>true</bool>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
      <widget class="QLineEdit" name="input_server_ip">
       <property name="geometry">
        <rect>
@@ -84,6 +62,25 @@
       </property>
       <property name="placeholderText">
        <string>type server ip</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="input_server_username">
+      <property name="geometry">
+       <rect>
+        <x>88</x>
+        <y>340</y>
+        <width>205</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="statusTip">
+       <string/>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="placeholderText">
+       <string>type login</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="input_server_password">
@@ -114,32 +111,100 @@
        <string>type password</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="input_server_username">
+     <widget class="QLabel" name="background_fill">
       <property name="geometry">
        <rect>
-        <x>88</x>
-        <y>340</y>
-        <width>205</width>
-        <height>40</height>
+        <x>0</x>
+        <y>0</y>
+        <width>381</width>
+        <height>721</height>
        </rect>
       </property>
-      <property name="statusTip">
-       <string/>
+      <property name="styleSheet">
+       <string notr="true">background: #262626;</string>
       </property>
       <property name="text">
        <string/>
       </property>
-      <property name="placeholderText">
-       <string>type login</string>
+     </widget>
+     <widget class="QLabel" name="label_text_credentials">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>220</y>
+        <width>261</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <family>Quicksand</family>
+        <pointsize>18</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: #FFFFFF;</string>
+      </property>
+      <property name="text">
+       <string>Enter your credentials</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_button_save">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>470</y>
+        <width>151</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>2000</width>
+        <height>2000</height>
+       </size>
+      </property>
+      <property name="sizeIncrement">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="baseSize">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">opacity: 255</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>assets/save_button.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
       </property>
      </widget>
      <widget class="QPushButton" name="button_save">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>480</y>
-        <width>141</width>
-        <height>61</height>
+        <x>110</x>
+        <y>470</y>
+        <width>151</width>
+        <height>91</height>
        </rect>
       </property>
       <property name="font">
@@ -175,37 +240,22 @@
        <bool>true</bool>
       </property>
      </widget>
-     <widget class="QLabel" name="background_fill">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>381</width>
-        <height>721</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background: #262626;</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
      <zorder>background_fill</zorder>
-     <zorder>background_greet</zorder>
      <zorder>input_server_ip</zorder>
-     <zorder>input_server_password</zorder>
      <zorder>input_server_username</zorder>
+     <zorder>input_server_password</zorder>
+     <zorder>label_text_credentials</zorder>
+     <zorder>label_button_save</zorder>
      <zorder>button_save</zorder>
     </widget>
     <widget class="QWidget" name="page_gallery">
      <widget class="QPushButton" name="button_upload">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>620</y>
-        <width>111</width>
-        <height>41</height>
+        <x>120</x>
+        <y>630</y>
+        <width>131</width>
+        <height>51</height>
        </rect>
       </property>
       <property name="text">
@@ -224,10 +274,10 @@
      <widget class="QLabel" name="label_upload">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>590</y>
-        <width>171</width>
-        <height>101</height>
+        <x>110</x>
+        <y>610</y>
+        <width>151</width>
+        <height>91</height>
        </rect>
       </property>
       <property name="text">
@@ -256,24 +306,172 @@
        <string/>
       </property>
      </widget>
+     <widget class="QScrollArea" name="scrollArea">
+      <property name="geometry">
+       <rect>
+        <x>19</x>
+        <y>19</y>
+        <width>341</width>
+        <height>571</height>
+       </rect>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>0</number>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="widgetResizable">
+       <bool>false</bool>
+      </property>
+      <widget class="QWidget" name="scrolliing_area">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>339</width>
+         <height>569</height>
+        </rect>
+       </property>
+       <property name="contextMenuPolicy">
+        <enum>Qt::NoContextMenu</enum>
+       </property>
+      </widget>
+     </widget>
      <zorder>background_fill_2</zorder>
      <zorder>label_upload</zorder>
      <zorder>button_upload</zorder>
+     <zorder>scrollArea</zorder>
     </widget>
     <widget class="QWidget" name="page_picture">
      <widget class="QPushButton" name="button_download">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>420</y>
-        <width>175</width>
-        <height>50</height>
+        <x>114</x>
+        <y>630</y>
+        <width>141</width>
+        <height>61</height>
        </rect>
       </property>
       <property name="text">
-       <string>download</string>
+       <string/>
       </property>
      </widget>
+     <widget class="QLabel" name="background_fill_3">
+      <property name="geometry">
+       <rect>
+        <x>-4</x>
+        <y>-8</y>
+        <width>381</width>
+        <height>731</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background: #262626;</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="image">
+      <property name="geometry">
+       <rect>
+        <x>24</x>
+        <y>32</y>
+        <width>321</width>
+        <height>591</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../upload/DQWQv4dsRSs.jpg</normaloff>
+        <normalon>../upload/DQWQv4dsRSs.jpg</normalon>
+        <disabledoff>../upload/DQWQv4dsRSs.jpg</disabledoff>
+        <disabledon>../upload/DQWQv4dsRSs.jpg</disabledon>
+        <activeoff>../upload/DQWQv4dsRSs.jpg</activeoff>
+        <activeon>../upload/DQWQv4dsRSs.jpg</activeon>
+        <selectedoff>../upload/DQWQv4dsRSs.jpg</selectedoff>
+        <selectedon>../upload/DQWQv4dsRSs.jpg</selectedon>../upload/DQWQv4dsRSs.jpg</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>321</width>
+        <height>591</height>
+       </size>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_download">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>610</y>
+        <width>151</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>assets/button_download.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="button_back">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>30</y>
+        <width>31</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_back">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>0</y>
+        <width>91</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>assets/button_back.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <zorder>background_fill_3</zorder>
+     <zorder>image</zorder>
+     <zorder>label_download</zorder>
+     <zorder>button_download</zorder>
+     <zorder>label_back</zorder>
+     <zorder>button_back</zorder>
     </widget>
    </widget>
   </widget>
